<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sommelier</string>
    <string name="default_notification_channel_id" translatable="false">Message</string>
    <string name="default_notification_channel_name" translatable="false">title</string>
    <string name="reply_label" translatable="false">Reply</string>
    <string name="tab_item_home" translatable="false">Усі сорти</string>
    <string name="tab_item_table" translatable="false">Столові</string>
    <string name="tab_item_seedless" translatable="false">Киш миш</string>
    <string name="tab_item_wine" translatable="false">Технічні</string>
    <string name="shortcut_long_label_hvoroby" translatable="false">Хвороби і шкідники</string>
    <string name="shortcut_short_label_hvoroby" translatable="false">Хвороби</string>
    <string name="shortcut_long_label_formuvannya" translatable="false">Будова і формування</string>
    <string name="shortcut_short_label_formuvannya" translatable="false">Формування</string>
    <string name="shortcut_long_label_calendar" translatable="false">Календар робіт і подій</string>
    <string name="shortcut_short_label_calendar" translatable="false">Календар</string>
    <string name="shortcut_long_label_maps" translatable="false">Винний тур</string>
    <string name="shortcut_short_label_maps" translatable="false">Винний тур</string>
    <string name="drawer_item_home">Головна</string>
    <string name="drawer_item_wine_tour" translatable="false">Винний тур</string>
    <string name="drawer_item_alco_kitchen" translatable="false">АлкоКухня</string>
    <string name="drawer_item_library" translatable="false">Бібліотека</string>
    <string name="drawer_item_favorite_varieties" translatable="false">Улюблені сорти</string>
    <string name="drawer_item_speсifications" translatable="false">Характеристики</string>
    <string name="drawer_item_laboratory" translatable="false">Лабораторія</string>
    <string name="drawer_item_care_protection" translatable="false">Догляд та захист</string>
    <string name="drawer_item_structure_formation" translatable="false">Будова і формування</string>
    <string name="drawer_item_reproduction" translatable="false">Розмноження</string>
    <string name="drawer_item_bug" translatable="false">Хвороби і шкідники</string>
    <string name="drawer_item_calendar" translatable="false">Календар робіт і подій</string>
    <string name="drawer_item_summ_temperature" translatable="false">Сума активних температур</string>
    <string name="drawer_item_preparaty" translatable="false">Засоби захисту</string>
    <string name="drawer_item_miscellaneous" translatable="false">Різне</string>
    <string name="drawer_item_rating" translatable="false">Оцінити в Google Play</string>
    <string name="drawer_item_share" translatable="false">Поширити застосунок</string>
    <string name="drawer_item_communication" translatable="false">Написати листа</string>
    <string name="drawer_item_gallery" translatable="false">Галерея</string>
    <string name="drawer_item_settings" translatable="false">Налаштування</string>
    <string name="drawer_item_section_header_security" translatable="false">Догляд і захист</string>
    <string name="drawer_item_call_in_call" translatable="false">Зворотній зв’язок</string>
    <string name="message_subject" translatable="false">Стосовно додатку GRAPES.</string>
    <string name="message_text" translatable="false">Привіт,</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="tab_reproduction_chubuk" translatable="false">Чубук</string>
    <string name="tab_reproduction_desktop_vaccine" translatable="false">Настільне щеплення</string>
    <string name="tab_formuvannya_budova" translatable="false">Будова</string>
    <string name="tab_formuvannya_posadka" translatable="false">Посадка</string>
    <string name="tab_formuvannya_guyot" translatable="false">Гюйо</string>
    <string name="tab_formuvannya_stelag" translatable="false">Стелаж</string>
    <string name="tab_formuvannya_viyalo" translatable="false">Віяло</string>
    <string name="tab_formuvannya_cordon" translatable="false">Кордон</string>
    <string name="name" translatable="false">НАЗВА</string>
    <string name="sort" translatable="false">ГРУПА</string>
    <string name="term" translatable="false">СТРОК</string>
    <string name="frost" translatable="false">МОРОЗ</string>
    <string name="color" translatable="false">КОЛІР</string>
    <string name="growth" translatable="false">РІСТ</string>
    <string name="weight" translatable="false">ВАГА</string>
    <string name="category_title_general">Налаштування</string>
    <string name="category_title_about">Про додаток</string>
    <string name="category_title_notifications">Налаштування сповіщень</string>
    <string name="title_language">Мова додатку</string>
    <string name="title_theme">Вибрати тему</string>
    <string name="title_licenses">Ліцензії відкритого коду</string>
    <string name="title_version">Версія</string>
    <string name="title_notifications_new_message_ringtone">Виберіть мелодію сповіщення</string>
    <string name="title_notifications_new_message">Нове сповіщення про повідомлення</string>
    <string name="title_vibrate">Вібрація</string>
    <string name="summary_description">Lorem ipsum dolor sit amet, dolor at ligula faucibus imperdiet libero, phasellus nulla sollicitudin in, libero nec venenatis, luctus pretium imperdiet volutpat sit atque. Porttitor ligula vitae ultrices eleifend, felis suscipit iaculis turpis, pellentesque magna sem non. Vehicula quis commodo, tincidunt eu id morbi ut nullam. Enim ipsum vestibulum, semper etiam, amet vivamus mauris, aliquam at maecenas phasellus in aliquet, suspendisse varius. Eros sapien, vulputate porta, elit suspendisse, magna a ante wisi, ligula feugiat vel vel suspendisse lacus ipsum. At varius vestibulum volutpat fringilla consectetuer. Vulputate cursus mollis senectus dapibus amet, mauris sapien diam sed sodales, velit neque justo sit et. Vehicula diam sit pellentesque blandit dolore semper, a proin mi quisque eget vitae, tempus nisl, cum varius gravida urna condimentum nunc. Dignissimos adipiscing bibendum eget pretium bibendum justo, sit orci eros erat ligula litora. Id volutpat lacus urna aperiam porttitor aptent, metus auctor montes ut, lectus sed. Ut enim fringilla nec elementum, tortor vestibulum erat. Pede volutpat.
    Lorem ipsum dolor sit amet, dolor at ligula faucibus imperdiet libero, phasellus nulla sollicitudin in, libero nec venenatis, luctus pretium imperdiet volutpat sit atque. Porttitor ligula vitae ultrices eleifend, felis suscipit iaculis turpis, pellentesque magna sem non. Vehicula quis commodo, tincidunt eu id morbi ut nullam. Enim ipsum vestibulum, semper etiam, amet vivamus mauris, aliquam at maecenas phasellus in aliquet, suspendisse varius. Eros sapien, vulputate porta, elit suspendisse, magna a ante wisi, ligula feugiat vel vel suspendisse lacus ipsum. At varius vestibulum volutpat fringilla consectetuer. Vulputate cursus mollis senectus dapibus amet, mauris sapien diam sed sodales, velit neque justo sit et. Vehicula diam sit pellentesque blandit dolore semper, a proin mi quisque eget vitae, tempus nisl, cum varius gravida urna condimentum nunc. Dignissimos adipiscing bibendum eget pretium bibendum justo, sit orci eros erat ligula litora. Id volutpat lacus urna aperiam porttitor aptent, metus auctor montes ut, lectus sed. Ut enim fringilla nec elementum, tortor vestibulum erat. Pede volutpat.
        Lorem ipsum dolor sit amet, dolor at ligula faucibus imperdiet libero, phasellus nulla sollicitudin in, libero nec venenatis, luctus pretium imperdiet volutpat sit atque. Porttitor ligula vitae ultrices eleifend, felis suscipit iaculis turpis, pellentesque magna sem non. Vehicula quis commodo, tincidunt eu id morbi ut nullam. Enim ipsum vestibulum, semper etiam, amet vivamus mauris, aliquam at maecenas phasellus in aliquet, suspendisse varius. Eros sapien, vulputate porta, elit suspendisse, magna a ante wisi, ligula feugiat vel vel suspendisse lacus ipsum. At varius vestibulum volutpat fringilla consectetuer. Vulputate cursus mollis senectus dapibus amet, mauris sapien diam sed sodales, velit neque justo sit et. Vehicula diam sit pellentesque blandit dolore semper, a proin mi quisque eget vitae, tempus nisl, cum varius gravida urna condimentum nunc. Dignissimos adipiscing bibendum eget pretium bibendum justo, sit orci eros erat ligula litora. Id volutpat lacus urna aperiam porttitor aptent, metus auctor montes ut, lectus sed. Ut enim fringilla nec elementum, tortor vestibulum erat. Pede volutpat.
    </string>
    <string name="summary_licenses">Деталі ліцензії з відкритим кодом</string>
    <string name="summary_version">1.0</string>
    <string name="summary_vibrate">Вібрація при отриманні сповіщень</string>
    <string name="button_licenses">Закрити</string>
    <string name="pref_ringtone_silent">Без звуку</string>
    <string-array name="region">
        <item>Закарпаття</item>
        <item>Одеса</item>
    </string-array>
    <string name="hasPermissions" translatable="false">Разрешение было успешно выполнено</string>
    <string name="rationale_call" translatable="false">Разрешение на вызов отклонено</string>
    <string name="rationale_location" translatable="false">Это приложение нуждается в доступе к вашему местоположению, чтобы узнать, где вы.</string>
    <string name="title_calculator" translatable="false">Розрахунок необхідної кількості цукру і води в суслі з винограду</string>
    <string name="hint_volume_juice" translatable="false">Об’єм соку, л</string>
    <string name="hint_sugar_juice" translatable="false">Кількість цукру в соці, г/л</string>
    <string name="hint_acidity_juice" translatable="false">Кислотність соку, г/л</string>
    <string name="hint_acidity_wine" translatable="false">Кислотність вина, г/л</string>
    <string name="hint_alcohol_wine" translatable="false">Спиртуозність вина, % об</string>
    <string name="hint_result_sugar" translatable="false">Кількість цукру, кг</string>
    <string name="hint_result_water" translatable="false">Об’єм води, л</string>
    <string name="hint_result_must" translatable="false">Об’єм сусла, л</string>
    <string name="helper_volume_juice" translatable="false">В домашніх умовах з ягід винограду можливо отримати 60-70%
        чистого соку</string>
    <string name="helper_sugar_juice" translatable="false">Нормативна кількість цукру у соці становить 63–293 г/л</string>
    <string name="helper_acidity_juice" translatable="false">Середнє значення кислотності виноградного соку становить
        5–10 г/л</string>
    <string name="helper_acidity_wine" translatable="false">Збалансованими вважаються вина
        з концентрацією кислоти 4-6 г/л</string>
    <string name="helper_alcohol_wine" translatable="false">Кількість спирту у вині становить від 9 до 20 % об.
        Найбільша міцність вина, яку можна отримати на природніх дріжджах не перевищує 12 % об</string>
    <string name="helper_result_sugar" translatable="false">Кількість цукру, яку необхідно внести до соку</string>
    <string name="helper_result_water" translatable="false">Об’єм води, який необхідно добавити до соку</string>
    <string name="helper_result_must" translatable="false">Загальний об’єм сусла</string>
    <string name="specific_gravity_juice" translatable="false">Питома вага соку</string>
    <string name="sugar_content_juice" translatable="false">Цукристість соку, %</string>
    <string name="fortress_future_wine" translatable="false">міцність майбутнього вина, град</string>
</resources>