<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_title_general">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/entries_language"
            android:entryValues="@array/entries_values_language"
            android:key="language"
            android:summary="%s"
            android:title="@string/title_language" />
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/entries_theme"
            android:entryValues="@array/entry_values_theme"
            android:key="theme"
            android:summary="%s"
            android:title="@string/title_theme" />
     </PreferenceCategory>


    <PreferenceCategory android:title="@string/category_title_notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/title_notifications_new_message" />
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/title_notifications_new_message_ringtone" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/title_vibrate" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/category_title_about">
        <Preference
            android:key="description"/>
        <Preference
            android:title="@string/title_licenses"
            android:key="license"
            android:summary="@string/summary_licenses"/>
        <Preference
            android:summary="@string/summary_version"
            android:key="version"
            android:title="@string/title_version"/>
    </PreferenceCategory>

</PreferenceScreen>