<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_content_view"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/specific_gravity_juice"
            style="@style/MyTableTextRowStyle"
            tools:text="@string/specific_gravity_juice" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sugar_content_juice"
            style="@style/MyTableTextRowStyle"
            tools:text="@string/sugar_content_juice" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fortress_future_wine"
            style="@style/MyTableTextRowStyle"
            tools:text="@string/fortress_future_wine" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>